--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
     "util": "^0.12.5",
-    "yup": "^1.2.0"
+    "yup": "^1.2.0",
+    "@react-native-async-storage/async-storage": "1.17.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
